[Qt] fast/events/media-focus-in-standalone-media-document.html fails https://bugs.webkit.org/show_bug.cgi?id=70110

Patch by Deepak Sherveghar <bpwv64@motorola.com> on 2011-10-24
Reviewed by Simon Hausmann.

Source/WebCore:

ExtensionMap should also include media files mapping.

* platform/qt/MIMETypeRegistryQt.cpp: Added media files mapping.

Source/WebKit/qt:

We should check for supported media mime types as well in the MIMETypeRegistry.

* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::FrameLoaderClientQt::canShowMIMEType): check for supported media mime type.

LayoutTests:

Remove media-focus-in-standalone-media-document.html from Qt Skipped test list.

* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/86907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98231 268f45cc-cd09-0410-ab3c-d52691b4dbfc